Core functionality: исправление замечаний